@@ -148,6 +148,26 @@ src/segyprogs/segyprogs_5.sh
 src/segyprogs/test.list
 src/segyprogs/test.cpt
 src/segyprogs/wa1_mig13.segy
+src/sph/README.sph
+src/sph/sphdistance.c
+src/sph/sphdistance.1
+src/sph/sphtriangulate.c
+src/sph/sphtriangulate.1
+src/sph/sphinterpolate.c
+src/sph/sphinterpolate.1
+src/sph/sph.c
+src/sph/sph.h
+src/sph/stripack.c
+src/sph/ssrfpack.c
+src/sph/makefile
+src/sph/sph_ex_1.sh
+src/sph/sph_ex_2.sh
+src/sph/sph_ex_3.sh
+src/sph/sph_ex_4.sh
+src/sph/mars370.txt
+src/sph/lun2.txt
+src/sph/hotspots.d
+src/sph/gshhs_c.txt
 src/spotter/README.spotter
 src/spotter/WK97.d
 src/spotter/DC85.d
